<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
            android:key="prefUsername"
            android:summary="@string/pref_user_name_summary"
            android:title="@string/pref_user_name" />
        <EditTextPreference
            android:key="prefCalName"
            android:summary="@string/pref_cal_name_summary"
            android:title="@string/pref_cal_name" />
        <EditTextPreference
            android:defaultValue="com.google"
            android:key="prefCalType"
            android:summary="@string/pref_cal_type_summary"
            android:title="@string/pref_cal_type" />
        <EditTextPreference
            android:key="prefCalOwner"
            android:summary="@string/pref_cal_owner_summary"
            android:title="@string/pref_cal_owner" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_alarm_setting" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefAlertEmail"
            android:summary="@string/pref_alert_email_summary"
            android:title="@string/pref_alert_email" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefAlertPop"
            android:summary="@string/pref_alert_pop_summary"
            android:title="@string/pref_alert_pop" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Test" >
        <ListPreference
            android:entries="@array/syncFrequency"
            android:entryValues="@array/syncFrequencyValues"
            android:key="prefSyncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>

</PreferenceScreen>